<resources>
    <string name="app_name">Memo</string>
    <string name="login_text">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_underlined"><u>Login</u></string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_underlined"><u>Sign Up</u></string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pharetra hendrerit massa ut ullamcorper. Suspendisse risus ante, gravida at nibh eget, tempor consectetur mauris. Vivamus placerat efficitur nulla, a euismod massa eleifend ac.</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="modified">Modified:</string>
    <string name="date_dumy">2018-11-10</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
</resources>
