<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rv_item_layout"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/rv_card_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:elevation="3dp"
        app:cardCornerRadius="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/layout_padding">

            <TextView
                android:id="@+id/tv_memo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/title_text_size"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="5dp"/>

            <TextView
                android:id="@+id/tv_recipient_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_text_size"
                android:layout_marginBottom="10dp"
                android:layout_toRightOf="@+id/tv_memo_title"/>

            <TextView
                android:id="@+id/tv_memo_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_text"
                android:layout_below="@id/tv_memo_title"
                android:textSize="@dimen/normal_text_size"
                android:layout_marginBottom="@dimen/layout_margin"/>

            <TextView
                android:id="@+id/tv_modified"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modified"
                android:layout_below="@+id/tv_memo_detail"
                android:layout_toStartOf="@+id/tv_memo_date"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:id="@+id/tv_memo_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_dumy"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_memo_detail"/>

        </RelativeLayout>


    </android.support.v7.widget.CardView>

</LinearLayout>