<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/layout_padding"
    tools:context=".Activity.Main3Activity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Memo App"
        android:gravity="center"
        android:textSize="36sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_marginTop="@dimen/login_et_margin"
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="@dimen/login_title_size"
        android:gravity="center"/>

    <EditText
        android:layout_marginTop="@dimen/login_et_margin"
        android:id="@+id/et_emai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text"/>

    <EditText
        android:layout_marginTop="@dimen/login_et_margin"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text"/>

    <EditText
        android:layout_marginTop="@dimen/login_et_margin"
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/edit_text"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_marginTop="@dimen/login_et_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account?"/>

        <TextView
            android:id="@+id/tv_go_to_login_view"
            android:layout_marginLeft="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_underlined"/>
    </LinearLayout>

</LinearLayout>