<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding_3"
    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Memo App"
            android:gravity="center"
            android:textSize="36sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/login_et_margin"
            android:id="@+id/login_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:text="@string/login"
            android:textSize="@dimen/login_title_size"
            android:gravity="center"/>

        <EditText
            android:layout_marginTop="@dimen/login_et_margin"
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_title"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/edit_text"/>

        <EditText
            android:layout_marginTop="@dimen/login_et_margin"
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_email"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:background="@drawable/edit_text"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/et_password"
            android:layout_marginTop="24dp"
            android:background="@drawable/button"
            android:layout_centerHorizontal="true"
            android:text="@string/login" />

        <LinearLayout
            android:layout_marginTop="@dimen/login_et_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_below="@+id/btn_login">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have an account?"/>

            <TextView
                android:id="@+id/tv_go_to_signup_view"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_underlined"/>
        </LinearLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pb_login"
        style="@android:style/Widget.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progress="25"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        android:backgroundTint="@color/colorAccent"/>

</FrameLayout>