<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_padding_3"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Memo App"
            android:gravity="center"
            android:textSize="36sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_marginTop="@dimen/login_et_margin"
            android:id="@+id/signup_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_signup"
            android:text="@string/sign_up"
            android:textSize="@dimen/login_title_size"
            android:gravity="center"/>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@id/signup_title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/input_layout_username"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                android:singleLine="true"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/input_layout_username"
            android:id="@+id/input_layout_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/input_layout_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/input_layout_password"
            android:layout_marginBottom="16dp">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_below="@+id/input_layout_password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/input_layout_confirm_password">
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:singleLine="true"
                android:hint="Confirm password"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/input_layout_confirm_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"
            android:text="@string/sign_up"
            android:theme="@style/PrimaryFlatButton"/>

        <LinearLayout
            android:layout_marginTop="@dimen/login_et_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_below="@+id/btn_sign_up">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"/>

            <TextView
                android:id="@+id/tv_go_to_login_view"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_underlined"/>
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>